--- a/Teste.html
+++ b/Teste.html
@@ -13,7 +13,7 @@
 			</tr>
 			
 			<tr>
-				<td><a href="C:\Users\jrene\Desktop\putty.exe">Mina de teste</a></td>
+				<td><a href="Link para download">Mina de teste</a></td>
 				<td>Tamanho do arquivo</td>
 				<td>Ultima modificação</td>
 			</tr>	
